--- a/小程序/AppOT/pages/mine/index.wxss
+++ b/小程序/AppOT/pages/mine/index.wxss
@@ -12,7 +12,12 @@
   align-items: center;
   line-height: 100rpx;
   background-color: #fff;
-  box-shadow: 0 0 50rpx 0 hsla(0, 0%, 71%, 0.24);
+  border-bottom: 1px solid #ececec;
+  /* box-shadow: 0 0 50rpx 0 hsla(0, 0%, 71%, 0.24);
+   */
+  /* margin: 20rpx; */
+  /*     
+   border-radius: 20rpx; */
 }
 
 .userinfo-avatar {
@@ -31,10 +36,13 @@
 }
 
 navigator {
-  height: auto;
-  width: auto;
-  display: block;
-  line-height: 80rpx;
+  line-height: 70rpx;
+  height: 70rpx;
+}
+
+.weui-cell__hd {
+  display: flex;
+  align-items: center;
 }
 
 .weui-cells_after-title {
@@ -42,10 +50,28 @@ navigator {
 }
 
 .money-info {
-  padding-top: 30rpx;
+  padding-top: 30rpx 0;
   text-align: center;
+  background-color: #fff;
 }
 
 .demo-row {
-  font-size: 30rpx;
+  padding: 10rpx 0;
+  font-size: 28rpx;
+}
+
+.demo-col:not(.first-col) {
+  border-left: 1px solid #ececec;
+}
+
+.content {
+  background-color: #fafafa;
+}
+
+/* .demo-col view:first-child {
+  color: #333;
+  font-weight: bold;
+} */
+.demo-col view:last-child {
+  color: #333;
 }
