--- a/小程序/AppOT/pages/task_hall/index.wxss
+++ b/小程序/AppOT/pages/task_hall/index.wxss
@@ -11,3 +11,12 @@
 .page {
   padding-bottom: 50rpx;
 }
+
+.i-card-header-extra {
+  flex: 1;
+  text-align: right;
+  font-size: 14px;
+  color: #000;
+  font-weight: 600;
+  font-size: 34rpx;
+}
