--- a/小程序/AppOT/pages/history_task/index.wxml
+++ b/小程序/AppOT/pages/history_task/index.wxml
@@ -1,122 +1,11 @@
 <view class="page">
-  <view class="card-demo" hover-class="none" hover-stop-propagation="false">
-    <i-card title="免费领用" extra="￥ 4" thumb="https://i.loli.net/2017/08/21/599a521472424.jpg" class="card-demo">
-      <view slot="content">劲炫撒旦教卡里的杰拉德加拉三等奖阿斯利康的骄傲时了解到大家</view>
-      <view slot="footer">2018-08-07 16:08:47</view>
+  <navigator url="../task_detail_no_btn/index" class="card-demo" hover-class="none" hover-stop-propagation="false">
+    <i-card title="最多七个字试试" extra="审核通过" thumb="https://i.loli.net/2017/08/21/599a521472424.jpg" class="card-demo">
+      <!-- <view slot="content" class="task_content">劲炫撒旦教卡里的杰拉德加拉三等奖阿斯利康的骄傲时了解到大家</view> -->
+      <view slot="footer" class="footer-items" hover-class="none" hover-stop-propagation="false">
+        <view slot="footer" class="footer-item">2018-08-07 16:08:47</view>
+        <view slot="footer" class="footer-item task_state">￥ 4</view>
+      </view>
     </i-card>
-  </view>
-  <view class="card-demo" hover-class="none" hover-stop-propagation="false">
-    <i-card title="免费领用" extra="￥ 4" thumb="https://i.loli.net/2017/08/21/599a521472424.jpg" class="card-demo">
-      <view slot="content">劲炫撒旦教卡里的杰拉德加拉三等奖阿斯利康的骄傲时了解到大家</view>
-      <view slot="footer">2018-08-07 16:08:47</view>
-    </i-card>
-  </view>
-  <view class="card-demo" hover-class="none" hover-stop-propagation="false">
-    <i-card title="免费领用" extra="￥ 4" thumb="https://i.loli.net/2017/08/21/599a521472424.jpg" class="card-demo">
-      <view slot="content">劲炫撒旦教卡里的杰拉德加拉三等奖阿斯利康的骄傲时了解到大家</view>
-      <view slot="footer">2018-08-07 16:08:47</view>
-    </i-card>
-  </view>
-  <view class="card-demo" hover-class="none" hover-stop-propagation="false">
-    <i-card title="免费领用" extra="￥ 4" thumb="https://i.loli.net/2017/08/21/599a521472424.jpg" class="card-demo">
-      <view slot="content">劲炫撒旦教卡里的杰拉德加拉三等奖阿斯利康的骄傲时了解到大家</view>
-      <view slot="footer">2018-08-07 16:08:47</view>
-    </i-card>
-  </view>
-  <view class="card-demo" hover-class="none" hover-stop-propagation="false">
-    <i-card title="免费领用" extra="￥ 4" thumb="https://i.loli.net/2017/08/21/599a521472424.jpg" class="card-demo">
-      <view slot="content">劲炫撒旦教卡里的杰拉德加拉三等奖阿斯利康的骄傲时了解到大家</view>
-      <view slot="footer">2018-08-07 16:08:47</view>
-    </i-card>
-  </view>
-  <view class="card-demo" hover-class="none" hover-stop-propagation="false">
-    <i-card title="免费领用" extra="￥ 4" thumb="https://i.loli.net/2017/08/21/599a521472424.jpg" class="card-demo">
-      <view slot="content">劲炫撒旦教卡里的杰拉德加拉三等奖阿斯利康的骄傲时了解到大家</view>
-      <view slot="footer">2018-08-07 16:08:47</view>
-    </i-card>
-  </view>
-  <view class="card-demo" hover-class="none" hover-stop-propagation="false">
-    <i-card title="免费领用" extra="￥ 4" thumb="https://i.loli.net/2017/08/21/599a521472424.jpg" class="card-demo">
-      <view slot="content">劲炫撒旦教卡里的杰拉德加拉三等奖阿斯利康的骄傲时了解到大家</view>
-      <view slot="footer">2018-08-07 16:08:47</view>
-    </i-card>
-  </view>
-  <view class="card-demo" hover-class="none" hover-stop-propagation="false">
-    <i-card title="免费领用" extra="￥ 4" thumb="https://i.loli.net/2017/08/21/599a521472424.jpg" class="card-demo">
-      <view slot="content">劲炫撒旦教卡里的杰拉德加拉三等奖阿斯利康的骄傲时了解到大家</view>
-      <view slot="footer">2018-08-07 16:08:47</view>
-    </i-card>
-  </view>
-  <view class="card-demo" hover-class="none" hover-stop-propagation="false">
-    <i-card title="免费领用" extra="￥ 4" thumb="https://i.loli.net/2017/08/21/599a521472424.jpg" class="card-demo">
-      <view slot="content">劲炫撒旦教卡里的杰拉德加拉三等奖阿斯利康的骄傲时了解到大家</view>
-      <view slot="footer">2018-08-07 16:08:47</view>
-    </i-card>
-  </view>
-  <view class="card-demo" hover-class="none" hover-stop-propagation="false">
-    <i-card title="免费领用" extra="￥ 4" thumb="https://i.loli.net/2017/08/21/599a521472424.jpg" class="card-demo">
-      <view slot="content">劲炫撒旦教卡里的杰拉德加拉三等奖阿斯利康的骄傲时了解到大家</view>
-      <view slot="footer">2018-08-07 16:08:47</view>
-    </i-card>
-  </view>
-  <view class="card-demo" hover-class="none" hover-stop-propagation="false">
-    <i-card title="免费领用" extra="￥ 4" thumb="https://i.loli.net/2017/08/21/599a521472424.jpg" class="card-demo">
-      <view slot="content">劲炫撒旦教卡里的杰拉德加拉三等奖阿斯利康的骄傲时了解到大家</view>
-      <view slot="footer">2018-08-07 16:08:47</view>
-    </i-card>
-  </view>
-  <view class="card-demo" hover-class="none" hover-stop-propagation="false">
-    <i-card title="免费领用" extra="￥ 4" thumb="https://i.loli.net/2017/08/21/599a521472424.jpg" class="card-demo">
-      <view slot="content">劲炫撒旦教卡里的杰拉德加拉三等奖阿斯利康的骄傲时了解到大家</view>
-      <view slot="footer">2018-08-07 16:08:47</view>
-    </i-card>
-  </view>
-  <view class="card-demo" hover-class="none" hover-stop-propagation="false">
-    <i-card title="免费领用" extra="￥ 4" thumb="https://i.loli.net/2017/08/21/599a521472424.jpg" class="card-demo">
-      <view slot="content">劲炫撒旦教卡里的杰拉德加拉三等奖阿斯利康的骄傲时了解到大家</view>
-      <view slot="footer">2018-08-07 16:08:47</view>
-    </i-card>
-  </view>
-  <view class="card-demo" hover-class="none" hover-stop-propagation="false">
-    <i-card title="免费领用" extra="￥ 4" thumb="https://i.loli.net/2017/08/21/599a521472424.jpg" class="card-demo">
-      <view slot="content">劲炫撒旦教卡里的杰拉德加拉三等奖阿斯利康的骄傲时了解到大家</view>
-      <view slot="footer">2018-08-07 16:08:47</view>
-    </i-card>
-  </view>
-  <view class="card-demo" hover-class="none" hover-stop-propagation="false">
-    <i-card title="免费领用" extra="￥ 4" thumb="https://i.loli.net/2017/08/21/599a521472424.jpg" class="card-demo">
-      <view slot="content">劲炫撒旦教卡里的杰拉德加拉三等奖阿斯利康的骄傲时了解到大家</view>
-      <view slot="footer">2018-08-07 16:08:47</view>
-    </i-card>
-  </view>
-  <view class="card-demo" hover-class="none" hover-stop-propagation="false">
-    <i-card title="免费领用" extra="￥ 4" thumb="https://i.loli.net/2017/08/21/599a521472424.jpg" class="card-demo">
-      <view slot="content">劲炫撒旦教卡里的杰拉德加拉三等奖阿斯利康的骄傲时了解到大家</view>
-      <view slot="footer">2018-08-07 16:08:47</view>
-    </i-card>
-  </view>
-  <view class="card-demo" hover-class="none" hover-stop-propagation="false">
-    <i-card title="免费领用" extra="￥ 4" thumb="https://i.loli.net/2017/08/21/599a521472424.jpg" class="card-demo">
-      <view slot="content">劲炫撒旦教卡里的杰拉德加拉三等奖阿斯利康的骄傲时了解到大家</view>
-      <view slot="footer">2018-08-07 16:08:47</view>
-    </i-card>
-  </view>
-  <view class="card-demo" hover-class="none" hover-stop-propagation="false">
-    <i-card title="免费领用" extra="￥ 4" thumb="https://i.loli.net/2017/08/21/599a521472424.jpg" class="card-demo">
-      <view slot="content">劲炫撒旦教卡里的杰拉德加拉三等奖阿斯利康的骄傲时了解到大家</view>
-      <view slot="footer">2018-08-07 16:08:47</view>
-    </i-card>
-  </view>
-  <view class="card-demo" hover-class="none" hover-stop-propagation="false">
-    <i-card title="免费领用" extra="￥ 4" thumb="https://i.loli.net/2017/08/21/599a521472424.jpg" class="card-demo">
-      <view slot="content">劲炫撒旦教卡里的杰拉德加拉三等奖阿斯利康的骄傲时了解到大家</view>
-      <view slot="footer">2018-08-07 16:08:47</view>
-    </i-card>
-  </view>
-  <view class="card-demo" hover-class="none" hover-stop-propagation="false">
-    <i-card title="免费领用" extra="￥ 4" thumb="https://i.loli.net/2017/08/21/599a521472424.jpg" class="card-demo">
-      <view slot="content">劲炫撒旦教卡里的杰拉德加拉三等奖阿斯利康的骄傲时了解到大家</view>
-      <view slot="footer">2018-08-07 16:08:47</view>
-    </i-card>
-  </view>
+  </navigator>
 </view>
