--- a/小程序/AppOT/pages/mine/index.wxml
+++ b/小程序/AppOT/pages/mine/index.wxml
@@ -9,60 +9,54 @@
     </block>
   </view>
   <view class="content">
-
-  <view class="money-info" hover-class="none" hover-stop-propagation="false">
-    <i-row i-class="demo-row">
-      <i-col span="8" i-class="demo-col first-col">
-        <view>
-          10.00
+    <view class="money-info" hover-class="none" hover-stop-propagation="false">
+      <i-row i-class="demo-row">
+        <i-col span="8" i-class="demo-col first-col">
+          <view>10.00</view>
+          <view>未提现</view>
+        </i-col>
+        <i-col span="8" i-class="demo-col">
+          <view>10.00</view>
+          <view>已提现</view>
+        </i-col>
+        <i-col span="8" i-class="demo-col">
+          <view>10.00</view>
+          <view>余额</view>
+        </i-col>
+      </i-row>
+    </view>
+    <view class="weui-cells weui-cells_after-title">
+      <navigator url="../userinfo/index" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+        <view class="weui-cell__hd">
+          <image src="../../images/username.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
         </view>
-        <view>
-          未提现
+        <view class="weui-cell__bd">个人资料</view>
+        <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+      </navigator>
+      <navigator url="../history_task/index" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+        <view class="weui-cell__hd">
+          <image src="../../images/order_2.png" style="margin-right: 5px;vertical-align: middle;width:22px; height: 22px;"></image>
         </view>
-      </i-col>
-      <i-col span="8" i-class="demo-col">
-        <view>
-          10.00
+        <view class="weui-cell__bd">任务记录</view>
+        <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+      </navigator>
+      <navigator url="../encash/index" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+        <view class="weui-cell__hd">
+          <!-- <i-icon type="financial_fill" size="20" color="#80848f"></i-icon> -->
+          <image src="../../images/encash.png" style="margin-right: 8px;margin-left: 2px;vertical-align: middle;width:16px; height: 16px;"></image>
         </view>
-        <view>
-          已提现
+        <view class="weui-cell__bd">财务管理</view>
+        <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+      </navigator>
+    </view>
+    <view class="weui-cells weui-cells_after-title">
+      <navigator url="../suggest/index" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+        <view class="weui-cell__hd">
+          <image src="../../images/advices.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
         </view>
-      </i-col>
-      <i-col span="8" i-class="demo-col">
-        <view>
-          10.00
-        </view>
-        <view>
-          余额
-        </view>
-      </i-col>
-    </i-row>
+        <view class="weui-cell__bd">关于与帮助</view>
+        <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+      </navigator>
+    </view>
   </view>
-  <view class="weui-cells weui-cells_after-title">
-    <navigator url="../userinfo/index" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-      <view class="weui-cell__hd">
-        <image src="../../images/username.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
-      </view>
-      <view class="weui-cell__bd">个人资料</view>
-      <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-    </navigator>
-    <navigator url="../history_task/index" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-      <view class="weui-cell__hd">
-        <image src="../../images/order_2.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
-      </view>
-      <view class="weui-cell__bd">任务记录</view>
-      <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-    </navigator>
-  </view>
-  <view class="weui-cells weui-cells_after-title">
-    <navigator url="../suggest/index" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-      <view class="weui-cell__hd">
-        <image src="../../images/advices.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
-      </view>
-      <view class="weui-cell__bd">关于与帮助</view>
-      <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-    </navigator>
-  </view>
-  </view>
-
 </view>
