--- a/小程序/AppOT/pages/task_hall/index.wxml
+++ b/小程序/AppOT/pages/task_hall/index.wxml
@@ -3,7 +3,9 @@
     <block wx:for="{{data}}" wx:key="*this">
       <navigator url="../task_detail/index" class="card-demo" hover-class="none" hover-stop-propagation="false">
         <i-card title="免费领用" extra="￥ 4" thumb="https://i.loli.net/2017/08/21/599a521472424.jpg" class="card-demo">
-          <view slot="content">劲炫撒旦教卡里的杰拉德加拉三等奖阿斯利康的骄傲时了解到大家</view>
+          <view slot="content" class="task_content">
+            韵泉竹酒它是一款有生命力的原生态健康养生酒，被誉为酒界黑马，竹酒沿用古法酿造，用现代技术将原浆酒注进竹里，与竹同长，使基酒与活竹完美融合，成酒色如同琥珀，酒质甘醇芬香浓郁，竹香四溢，具有驱风湿，疏筋活络，美容养颜等功效！是您走亲访友，朋友小聚的不二选择！招商热线
+          </view>
           <view slot="footer">2018-08-07 16:08:47</view>
         </i-card>
       </navigator>
