--- a/小程序/AppOT/pages/task_own/index.wxss
+++ b/小程序/AppOT/pages/task_own/index.wxss
@@ -12,17 +12,11 @@
   padding-bottom: 50rpx;
 }
 
-.btn-copy {
-  width: 70%;
-  margin-left: 15%;
-}
-
-.btn-submit {
-  margin: 100rpx 0;
-  width: 70%;
-  margin-left: 15%;
-
-}
-.content{
-  height: 
+.i-card-header-extra {
+  flex: 1;
+  text-align: right;
+  font-size: 14px;
+  color: #000;
+  font-weight: 600;
+  font-size: 34rpx;
 }
