--- a/小程序/AppOT/pages/index/index.wxml
+++ b/小程序/AppOT/pages/index/index.wxml
@@ -8,7 +8,7 @@
     </block>
   </swiper>
   <swiper class="swiper_container" vertical="true" autoplay="true" circular="true" interval="2000">
-    <block wx:for="{{msgList}}">
+    <block wx:for="{{msgList}}"  wx:key="{{msgList.index}}">
       <navigator url="/pages/index/index?title={{item.url}}" open-type="navigate">
         <swiper-item>
           <view class="swiper_item">{{item.title}}</view>
