--- a/小程序/AppOT/pages/userinfo/index.wxml
+++ b/小程序/AppOT/pages/userinfo/index.wxml
@@ -1,62 +1,21 @@
 <view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo" class='getPower'>
-      <view class='getText'>点击授权</view>
-      <!-- <image class='btnImg' src='../../images/power.png'></image> -->
-    </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
-  </view>
-  <!-- <view class="weui-cells weui-cells_after-title">
-    <view class="weui-cell">
-      <view class="weui-cell__hd">
-        <image src="../../images/school.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
-      </view>
-      <view class="weui-cell__bd first_bd">学校</view>
-      <view class="weui-cell__bd school">
-        <picker bindchange="bindPickerChange" value="{{index}}" range="{{array}}">
-          {{array[index]}}
-        </picker>
-      </view>
+  <form bindsubmit="formSubmit" bindreset="formReset">
+    <view class="userinfo">
+      <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo" class='getPower'>
+        <view class='getText'>点击授权</view>
+      </button>
+      <block wx:else>
+        <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
+        <text class="userinfo-nickname">{{userInfo.nickName}}</text>
+      </block>
     </view>
-    <view class="weui-cell">
-      <view class="weui-cell__hd">
-        <image src="../../images/username.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
-      </view>
-      <view class="weui-cell__bd first_bd">姓名</view>
-      <view class="weui-cell__bd">
-        <input bindinput="onInputUsername" class="weui-input" placeholder="收件人姓名" value='{{username}}' />
-      </view>
-    </view>
-    <view class="weui-cell">
-      <view class="weui-cell__hd">
-        <image src="../../images/address.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
-      </view>
-      <view class="weui-cell__bd first_bd">地址</view>
-      <view class="weui-cell__bd">
-        <input bindinput="onInputAddress" class="weui-input" placeholder="收件人地址" value='{{address}}' />
-      </view>
-    </view>
-    <view class="weui-cell">
-      <view class="weui-cell__hd">
-        <image src="../../images/phoneNumber.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
-      </view>
-      <view class="weui-cell__bd first_bd">手机号</view>
-      <view class="weui-cell__bd">
-        <input bindinput="onInputPhone" class="weui-input" placeholder="收件人手机号" type="tel" value='{{phone}}' />
-      </view>
-    </view>
-  </view> -->
-  <i-panel>
-    <i-input value="{{ value1 }}" title="真实姓名" autofocus placeholder="名字" type="textarea" />
-    <i-input value="{{ value2 }}" type="number" title="联系电话" placeholder="请输入手机号" />
-    <i-input value="{{ value3 }}" type="textarea" title="详细地址" placeholder="请输入详细地址(最多50字)" maxlength="50" />
-    <i-input value="{{ value4 }}" type="textarea" title="支付宝号" placeholder="请输入支付宝号" />
-    <i-input value="{{ value5 }}" type="textarea" title="微信号" placeholder="请输入微信号" />
-  </i-panel>
-  <i-button bind:click="saveUserInfo" type="success" shape="circle" size="small" class="btn">
-    提交
-  </i-button>
+    <i-panel>
+      <i-input value="{{ value1 }}" title="真实姓名"  placeholder="名字" type="textarea" name="value1" />
+      <i-input value="{{ value2 }}" type="number" title="联系电话" placeholder="请输入手机号" name="value2" />
+      <i-input value="{{ value3 }}" type="textarea" title="详细地址" placeholder="请输入详细地址(最多50字)" maxlength="50" name="value3" />
+      <i-input value="{{ value4 }}" type="textarea" title="支付宝号" placeholder="请输入支付宝号" name="value4" />
+      <i-input value="{{ value5 }}" type="textarea" title="微信号" placeholder="请输入微信号" name="value5" />
+    </i-panel>
+    <button formType="submit" type="success" class="btn">提交</button>
+  </form>
 </view>
