确认一下版本问题

--- a/小程序/AppOT/pages/task_detail_no_btn/index.wxml
+++ b/小程序/AppOT/pages/task_detail_no_btn/index.wxml
@@ -27,7 +27,7 @@
       </block>
     </view>
   </i-card>
-  <i-collapse>
+  <i-collapse class="task_detail">
     <i-collapse-item title="任务详情" name="name1">
       <view slot="content">
         <i-card title="竹酒" extra="￥ 4">
