--- a/小程序/AppOT/pages/history_task/index.wxml
+++ b/小程序/AppOT/pages/history_task/index.wxml
@@ -1,7 +1,7 @@
 <view class="page">
   <block wx:for="{{data}}" wx:key="*this">
-    <navigator url="../task_detail_no_btn/index" class="card-demo" hover-class="none" hover-stop-propagation="false">
-      <i-card title="{{item.task.taskId}}" extra="{{item.state}}" thumb="{{item.task.taskImgs[0].url}}" class="card-demo">
+    <navigator url="../task_detail_no_btn/index?taskOrderId={{item.taskOrderId}}" class="card-demo" hover-class="none" hover-stop-propagation="false">
+      <i-card title="{{item.task.taskId}}" extra="{{stateMsg[item.state]}}" thumb="{{item.task.taskImgs[0].url}}" class="card-demo">
         <!-- <view slot="content" class="task_content">劲炫撒旦教卡里的杰拉德加拉三等奖阿斯利康的骄傲时了解到大家</view> -->
         <view slot="footer" class="footer-items" hover-class="none" hover-stop-propagation="false">
           <view slot="footer" class="footer-item">{{item.task.createTime}}</view>
