--- a/小程序/AppOT/pages/task_detail_no_btn/index.wxml
+++ b/小程序/AppOT/pages/task_detail_no_btn/index.wxml
@@ -1,6 +1,6 @@
 <view class="container">
   <view class="" hover-class="none" hover-stop-propagation="false">
-    <i-steps current="{{current}}" class="task_step">
+    <i-steps current="{{data.state}}" class="task_step">
       <i-step icon="barrage">
         <view slot="title">未提交</view>
         <!-- <view slot="content">请提交任务</view> -->
@@ -21,19 +21,16 @@
   </view>
   <!-- <view style="margin: 16px;text-align:center;"></view> -->
   <i-card title="提交任务截图信息">
-    <view slot="content">
-      <block wx:for="{{imgArr}}" wx:key="*this">
-        <image src="{{item}}" bindtap="handleOpen" data-imgurl='{{item}}' />
-      </block>
+    <view slot="content" hidden="{{data.startImg==undefined?true:false}}">
+      <image src="{{data.startImg}}" bindtap="handleOpen" data-imgurl='{{item.startImg}}' />
+      <image src="{{data.endImg}}" bindtap="handleOpen" data-imgurl='{{item.endImg}}' />
     </view>
   </i-card>
   <i-collapse class="task_detail">
     <i-collapse-item title="任务详情" name="name1">
       <view slot="content">
-        <i-card title="竹酒" extra="￥ 4">
-          <view slot="content">
-            韵泉竹酒它是一款有生命力的原生态健康养生酒，被誉为酒界黑马，竹酒沿用古法酿造，用现代技术将原浆酒注进竹里，与竹同长，使基酒与活竹完美融合，成酒色如同琥珀，酒质甘醇芬香浓郁，竹香四溢，具有驱风湿，疏筋活络，美容养颜等功效！是您走亲访友，朋友小聚的不二选择！招商热线 15220086930
-          </view>
+        <i-card title="{{data.task.name}}" extra="￥ {{data.task.commission}}">
+          <view slot="content">{{data.task.article}}</view>
           <view slot="footer">点击复制文案即可复制文案到剪贴板</view>
         </i-card>
         <i-button bind:click="setClipboardData" type="success" shape="circle" size="small" class="btn-copy" data-content="这是剪切板的数据">
@@ -41,8 +38,8 @@
         </i-button>
         <i-card title="图片">
           <view slot="content">
-            <block wx:for="{{imgArr}}" wx:key="*this">
-              <image src="{{item}}" bindtap="handleOpen" data-imgurl='{{item}}' />
+            <block wx:for="{{data.task.taskImgs}}" wx:key="*this">
+              <image src="{{item.url}}" bindtap="handleOpen" data-imgurl='{{item.url}}' />
             </block>
           </view>
           <view slot="footer">点击图片即可保存图片到手机</view>
@@ -50,9 +47,9 @@
       </view>
     </i-collapse-item>
   </i-collapse>
-  <i-button bind:click="handleClick" type="success" shape="circle" size="small" class="btn-submit">
-    修改上传图片
-  </i-button>
+  <navigator url="../upload_task/index?taskOrderId={{data.taskOrderId}}" class="btn-submit">
+    <i-button type="success" shape="circle" size="small" class="btn-submit">修改上传图片</i-button>
+  </navigator>
 </view>
 <!-- 弹出框 -->
 <i-modal visible="{{ visible }}" bind:ok="handleClickOK" bind:cancel="handleClickCancel">
