--- a/小程序/AppOT/pages/task_hall/index.wxml
+++ b/小程序/AppOT/pages/task_hall/index.wxml
@@ -1,6 +1,9 @@
 <view class="page">
+  <!-- <view hidden="{{data==[]?false:true}}">
+    <image src="../../images/nodata.jpg"></image>
+  </view> -->
   <view>
-    <block wx:for="{{data}}" wx:key="*this">
+    <block wx:for="{{data}}" wx:key="*this.index">
       <navigator url="../task_detail/index?taskId={{item.taskId}}" class="card-demo" hover-class="none" hover-stop-propagation="false">
         <i-card title="{{item.taskId}}" extra="￥ {{item.commission}}" thumb="{{item.taskImgs[0].url}}" class="card-demo">
           <view slot="content" class="task_content">{{item.article}}</view>
