--- a/小程序/AppOT/app.wxss
+++ b/小程序/AppOT/app.wxss
@@ -8,6 +8,7 @@
   align-items: stretch;
   justify-content: space-between;
   box-sizing: border-box;
+  /* box-shadow: 0 2px 20px 4px #e9e9e9; */
 }
 
 button[type=default] {
@@ -45,4 +46,20 @@ button[type=default] {
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
   overflow: hidden;
+}
+
+.nodata-img {
+  display: block;
+  margin: auto;
+  width: 250rpx;
+  height: 210rpx;
+  margin-bottom: 20rpx;
+}
+
+.nodata-content {
+  height: 100%;
+  color: #666;
+  text-align: center;
+  margin-top: 50rpx;
+  font-size: 14px;
 }
