--- a/小程序/AppOT/pages/encash/index.wxss
+++ b/小程序/AppOT/pages/encash/index.wxss
@@ -1,11 +1,20 @@
 /* pages/encash/index.wxss */
 
 .encash-input {
-  margin: 50rpx 0;
+  margin: 20rpx 0;
 }
 
 .btn-submit {
   /* margin: 100rpx 0; */
   width: 70%;
   margin-left: 15%;
+}
+
+.encash-record {
+  padding-top: 20rpx;
+  background-color: #fafafa;
+}
+
+.i-cell-text {
+  font-weight: bold;
 }
