--- a/小程序/AppOT/pages/index/index.wxml
+++ b/小程序/AppOT/pages/index/index.wxml
@@ -3,7 +3,7 @@
   <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" class="swiper-container">
     <block wx:for="{{imgUrls}}" wx:key="{{imgUrls.index}}">
       <swiper-item>
-        <image src="{{item}}" class="slide-image" bindtap='banner_detail' />
+        <image src="{{item}}" class="slide-image" />
       </swiper-item>
     </block>
   </swiper>
@@ -35,4 +35,14 @@
   <view>
     <image src='https://ss2.bdstatic.com/70cFvnSh_Q1YnxGkpoWK1HF6hhy/it/u=2184430969,1864452169&fm=26&gp=0.jpg' class='footer' />
   </view>
+
 </view>
+<!-- <view class="shandow" hidden="{{ visible1 }}">
+  <view class='modal'>
+    <view class='title'>用户须知</view>
+    <view cla>一些文本一些文本一些文本一些文本一些文本一些文本一些文本一些文本一些文本一些文本 </view>
+    <view class='btn-content'>
+      <button formType="submit" type="success" class="weui-btn mini-btn btn" size="mini" open-type="getUserInfo" bindgetuserinfo="getUserInfo">同意</button>
+    </view>
+  </view>
+</view> -->
