--- a/小程序/AppOT/style/app.wxss
+++ b/小程序/AppOT/style/app.wxss
@@ -2,6 +2,7 @@
 
 .container {
   height: 100%;
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
